# nadlan-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: internals.md
examples/: quickstart.py
nadlan/: __init__.py  client.py  mcp_server.py  rest.py  signing.py
tests/: conftest.py  test_client.py  test_mcp_tools.py  test_signing.py
